force-app/main/default/objects/Competing_Broker_Submission__c/Competing_Broker_Submission__c.object-meta.xml
<CustomObject>
    <description>Audit trail of every inbound broker email that matched a property, including the winning submission itself. Deliberately NOT master-detail on Winning_Lead__c - cascade delete would silently wipe this trail if a winning Lead were deleted.</description>
    <label>Competing Broker Submission</label>
    <nameField>
        <displayFormat>CBS-{0000000}</displayFormat>
        <label>Submission Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Competing Broker Submissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>