force-app/main/default/objects/Competing_Broker_Submission__c/fields/Broker_Email__c.field-meta.xml
<CustomField>
    <fullName>Broker_Email__c</fullName>
    <label>Broker Email</label>
    <description>Broker email address as extracted from the original From: header.</description>
    <inlineHelpText>Extracted by the LLM (or the regex fallback) from the email's From: header.</inlineHelpText>
    <type>Email</type>
</CustomField>