force-app/main/default/objects/Competing_Broker_Submission__c/fields/Broker_Name__c.field-meta.xml
<CustomField>
    <fullName>Broker_Name__c</fullName>
    <label>Broker Name</label>
    <length>255</length>
    <description>Broker name as extracted from the original From: header.</description>
    <inlineHelpText>Extracted by the LLM (or the regex fallback) from the email's From: header.</inlineHelpText>
    <type>Text</type>
</CustomField>