force-app/main/default/objects/Competing_Broker_Submission__c/fields/Forwarded_By_Email__c.field-meta.xml
<CustomField>
    <fullName>Forwarded_By_Email__c</fullName>
    <label>Forwarded By Email</label>
    <description>The internal forwarder's email address (envelope from).</description>
    <inlineHelpText>The internal employee who forwarded the broker email into the Email Service, not the broker.</inlineHelpText>
    <type>Email</type>
</CustomField>