force-app/main/default/objects/Competing_Broker_Submission__c/fields/Is_Winning_Submission__c.field-meta.xml
<CustomField>
    <fullName>Is_Winning_Submission__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Winning Submission</label>
    <description>True only on the row representing the property's original winner. Drives the Winner / Competing badge in the competingBrokerSubmissions LWC.</description>
    <inlineHelpText>Checked only on the one submission row that claimed the property first.</inlineHelpText>
    <type>Checkbox</type>
</CustomField>