force-app/main/default/objects/Competing_Broker_Submission__c/fields/Property_Address_Raw__c.field-meta.xml
<CustomField>
    <fullName>Property_Address_Raw__c</fullName>
    <label>Property Address Raw</label>
    <length>255</length>
    <description>Raw property address string as extracted from the email body before normalization.</description>
    <inlineHelpText>Unnormalized address as written in the email. See Property_Registry__c.Property_Key__c for the normalized claim key.</inlineHelpText>
    <type>Text</type>
</CustomField>