force-app/main/default/objects/Competing_Broker_Submission__c/fields/Source_Lead__c.field-meta.xml
<CustomField>
    <fullName>Source_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source Lead</label>
    <description>The Lead created for this specific inbound email. Equal to Winning_Lead__c on the winning submission row.</description>
    <inlineHelpText>The Lead this individual inbound email produced, whether or not it went on to win.</inlineHelpText>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Broker Submissions (Source)</relationshipLabel>
    <relationshipName>Source_Broker_Submissions</relationshipName>
    <type>Lookup</type>
</CustomField>