force-app/main/default/objects/Competing_Broker_Submission__c/fields/Submitted_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Submitted_DateTime__c</fullName>
    <label>Submitted Date/Time</label>
    <description>Parsed from the original Sent: header when available, otherwise the processing time. This is the ordering key for the submission history.</description>
    <inlineHelpText>Drives the chronological order of the submission history shown in the LWC.</inlineHelpText>
    <type>DateTime</type>
</CustomField>