force-app/main/default/objects/Competing_Broker_Submission__c/fields/Winning_Lead__c.field-meta.xml
<CustomField>
    <fullName>Winning_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Winning Lead</label>
    <description>The Lead that owns this property. All submissions for a property hang off the winner, which is what the LWC queries. SetNull preserves the audit row if the Lead is deleted; presence enforced by the Winning_Lead_Required validation rule.</description>
    <inlineHelpText>The winning Lead this submission's history rolls up under.</inlineHelpText>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Competing Broker Submissions</relationshipLabel>
    <relationshipName>Competing_Broker_Submissions</relationshipName>
    <type>Lookup</type>
</CustomField>