force-app/main/default/objects/Competing_Broker_Submission__c/fields/Winning_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Winning_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Winning Opportunity</label>
    <description>The winner AFTER lead conversion. Written instead of Winning_Lead__c when the winning Lead is converted, because a lookup to a converted Lead is rejected by the platform (CANNOT_UPDATE_CONVERTED_LEAD). Exactly one of Winning_Lead__c / Winning_Opportunity__c is populated on any row.</description>
    <inlineHelpText>The winning Opportunity this submission's history rolls up under, once the winning Lead has been converted.</inlineHelpText>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Broker Submissions (Opportunity)</relationshipLabel>
    <relationshipName>Opportunity_Broker_Submissions</relationshipName>
    <type>Lookup</type>
</CustomField>