force-app/main/default/objects/Competing_Broker_Submission__c/validationRules/Winning_Lead_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Winning_Lead_Required</fullName>
    <active>true</active>
    <description>Insert-scoped stand-in for a required lookup; ISNEW()-scoped so SetNull on Lead delete is not blocked. A row must name a winner as either a Lead (open) or an Opportunity (converted) - the platform rejects a lookup set to a converted Lead.</description>
    <errorConditionFormula>AND(ISNEW(), ISBLANK(Winning_Lead__c), ISBLANK(Winning_Opportunity__c))</errorConditionFormula>
    <errorDisplayField>Winning_Lead__c</errorDisplayField>
    <errorMessage>A broker submission must name a winner as either a Lead (pre-conversion) or an Opportunity (post-conversion).</errorMessage>
</ValidationRule>